[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/notaplaceholdersprite.png" type="Texture" id=1]
[ext_resource path="res://scripts/Explosion.gd" type="Script" id=2]
[ext_resource path="res://sprites/explosionflash.png" type="Texture" id=3]
[ext_resource path="res://sounds/bombombom.wav" type="AudioStream" id=4]
[ext_resource path="res://sprites/explosionring.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.90227, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.0223464, 0.111732, 0.217877, 0.424581, 0.575419, 1 )
colors = PoolColorArray( 1, 0.701961, 0, 0.305882, 1, 0.886275, 0.611765, 0.333333, 1, 0.498039, 0.2, 0.45098, 0.494118, 0.152941, 0.0745098, 0.372549, 0.34902, 0.129412, 0.117647, 0.192157, 1, 1, 1, 0 )

[sub_resource type="CircleShape2D" id=4]
radius = 55.0818

[sub_resource type="Animation" id=5]
resource_name = "Flash"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionEffect/Ring:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.164939, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExplosionEffect/Ring:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 0.25 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ExplosionEffect/Ring:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionEffect/Ring:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Explosion" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="ExplosionEffect" type="CPUParticles2D" parent="."]
material = SubResource( 1 )
emitting = false
amount = 120
one_shot = true
explosiveness = 1.0
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 11.57
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 27.52
angular_velocity = 720.0
angular_velocity_random = 1.0
linear_accel = -33.03
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="ExplosionArea" type="Area2D" parent="ExplosionEffect"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionEffect/ExplosionArea"]
shape = SubResource( 4 )

[node name="Ring" type="Sprite" parent="ExplosionEffect"]
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 5 )

[node name="DeleteTimer" type="Timer" parent="."]
autostart = true

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
color = Color( 1, 0.701961, 0, 1 )
energy = 0.0
shadow_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 4.0
autoplay = true

[connection signal="area_entered" from="ExplosionEffect/ExplosionArea" to="." method="_on_ExplosionArea_area_entered"]
[connection signal="body_entered" from="ExplosionEffect/ExplosionArea" to="." method="_on_ExplosionArea_body_entered"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_DeleteTimer_timeout"]
